--- a/ds1m-a/cleiton/index.html
+++ b/ds1m-a/cleiton/index.html
@@ -7,6 +7,7 @@
     <script src="js/script.js"></script>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./font/berserker-regular-font/Berserker-Regular.ttf">
 
     <script src="https://kit.fontawesome.com/78c0e1b8e9.js" crossorigin="anonymous"></script>
@@ -42,7 +43,10 @@
     </header>
     <main>
         <section class="home" id="home">
-            <img src="./img/home.jpg" alt="Kratos fundo">
+            <div class="suspenso1">Kratos e Atreus estão de volta em uma épica aventura até o fim de tudo que conhecemos!
+            </div>
+            <div class="suspenso2">Enfrente Deuses, monstros e mortais aterrorizantes!</div>
+            <div class="suspenso3">O Ragnarök está aqui, escolha entre sua segurança e a dos 9 reinos!</div>
         </section>
         <section class="info" id="info"></section>
         <section class="personagens" id="personagens"></section>
