correções rapidas do header

--- a/ds1m-b/Eduardo Ribeiro Pimenta/index.html
+++ b/ds1m-b/Eduardo Ribeiro Pimenta/index.html
@@ -13,16 +13,16 @@
 <body>
     <header>
         <nav class="menu">
-            <a href="#home">
+            <a href="#sobre">
                 <span>SOBRE</span>
             </a>
-            <a href="#sobre">
+            <a href="#novidades">
                 <span>SOCIAL</span>
             </a>
             <a href="#novidades">
                 <span>NOVIDADES</span>
             </a>
-            <a href="#dowload">
+            <a href="#download">
                 <span>DOWLOAD</span>
             </a>
         </nav>
