logo/home feito

--- a/ds1m-b/Eduardo Ribeiro Pimenta/index.html
+++ b/ds1m-b/Eduardo Ribeiro Pimenta/index.html
@@ -28,7 +28,9 @@
         </nav>
     </header>
     <main>
-        <section class="home" id="home"></section>
+        <section class="home" id="home">
+            <img class="logo" src="./img/logo.png" alt="logo Among Us">
+        </section>
         <section class="sobre" id="sobre"></section>
         <section class="novidades" id="novidades"></section>
         <section class="download" id="download"></section>
