--- a/ds1m-a/cleiton/index.html
+++ b/ds1m-a/cleiton/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/info.css">
+    <link rel="stylesheet" href="./css/personagens.css">
     <link rel="stylesheet" href="./font/berserker-regular-font/Berserker-Regular.ttf">
 
     <script src="https://kit.fontawesome.com/78c0e1b8e9.js" crossorigin="anonymous"></script>
@@ -48,8 +50,21 @@
             <div class="suspenso2">Enfrente Deuses, monstros e mortais aterrorizantes!</div>
             <div class="suspenso3">O Ragnarök está aqui, escolha entre sua segurança e a dos 9 reinos!</div>
         </section>
-        <section class="info" id="info"></section>
-        <section class="personagens" id="personagens"></section>
+        <section class="info" id="info">
+            <h1 class="fundo">
+                <div class="info-titulo">Tudo se une para forjar um épico de ação monumental que adiciona mais um marco impressionante ao cenário dos videogames.</div>
+                <div class="info1"><img src="./img/info1.png" alt=""> A escrita, as performances e a música são excepcionais, dando vida a esta tapeçaria nórdica expansiva - mas mesmo que segure seu coração em uma mão com sua história contada com elegância, está triturando
+                    ossos na outra com um combate fantasticamente feroz.
+                </div>
+                <div class="info2"><img src="./img/info2.png" alt="">Atreus busca o conhecimento para entender a profecia de "Loki" e definir o papel dele no Ragnarök. Kratos deve se desacorrentar do medo de repetir erros do passado para ser o pai que Atreus precisa.</div>
+            </h1>
+        </section>
+        <section class="personagens" id="personagens">
+            <H1>Personagens</H1>
+            <div class="card"><img src="./img/kratos.png" alt="">Kratos</div>
+            <div class="card"></div>
+
+        </section>
         <section class="compre" id="compre"></section>
     </main>
     <footer>footer</footer>
