--- a/ds1m-b/Eduardo Ribeiro Pimenta/index.html
+++ b/ds1m-b/Eduardo Ribeiro Pimenta/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/menu.css">
     <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/section-title.css">
+    <link rel="stylesheet" href="./css/sobre.css">
     <title>among us</title>
 </head>
 <body>
@@ -31,7 +33,13 @@
         <section class="home" id="home">
             <img class="logo" src="./img/logo.png" alt="logo Among Us">
         </section>
-        <section class="sobre" id="sobre"></section>
+        <section class="sobre" id="sobre">
+            <h2 class="section-title">Sobre</h2>
+            <p>AMONG US é um party game com o objetivo pricipal dos
+            <span class="tripulante">tripulantes</span> é encontrar o
+            <span class="impostor">impostor</span>, que tem como objetivo eliminar os outros jogadores sem ser descobrerto.</p>
+            <img src="./img/tablet.png" alt="tablet amongus">
+        </section>
         <section class="novidades" id="novidades"></section>
         <section class="download" id="download"></section>
     </main>
