--- a/ds1m-b/paula-blesa/index.html
+++ b/ds1m-b/paula-blesa/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/menu.css">
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/sobre.css">
-    <link rel="stylesheet" href="./css/images.css">
+    <link rel="stylesheet" href="./css/image.css">
     <link rel="stylesheet" href="./css/raças.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Updock&display=swap" rel="stylesheet">
@@ -38,13 +38,13 @@
                     <a href="#raças">Raças</a>
                 </li>
                 <li>
-                    <a href="#curiosidades">Curiosidades</a>
+                    <a href="#Curiosidades">Curiosidades</a>
                 </li>
                 <li>
-                    <a href="#gif">Gif</a>
+                    <a href="#Gif">Gif</a>
                 </li>
                 <li>
-                    <a href="#contato">Contato</a>
+                    <a href="#Contato">Contato</a>
                 </li>
             </ul>
         </nav>
@@ -52,59 +52,58 @@
     </header>
     <main>
         <section class="home" id="home">
-            <h1 class="title">gatos </h1>
-            <div class="cats">
-                <img src="./img/gatosqnsom.png" alt="gatos">
-
-            </div>
+            <h1 class="title">GATOS </h1>
         </section>
-
         <section class="sobre" id="sobre">
-            <h2 class="title-sobre"> SOBRE</h2>
-            <p class="border"></p>
-            <div class="icon-bola">
-                <img src="./img/bola.png" alt="bola">
+            <div class="sobre-icon">
+                <h2 class="title-sobre"> SOBRE</h2>
+                <img src="./img/bola.png" alt="bola" class="bola" href="#bola">
             </div>
-            <div class="description">
-                <p class="description-title">
+            <span class="border"></span>
+            <div class="description-cat">
+                <span class="description-title">
                     O gato, também conhecido como gato caseiro, gato urbano ou gato doméstico, é um mamífero carnívoro da família dos felídeos, muito popular como animal de estimação. Ocupando o topo da cadeia alimentar, é predador natural de diversos animais, como roedores,
                     pássaros, lagartixas e alguns insetos.
-                </p>
-            </div>
-            <div class="section-images fade" id="section-images">
-                <div class="slides-image">
-                    <img src="./img/cat-1.png" alt="cat 1">
+                </span>
+                <div>
+                    <img src="./img/cat-1.png" alt="" class="cat1">
                 </div>
-            </div>
-            <div class="description">
-                <p class="description-text">
-                    Expectativa de Vida: 12 – 18 anos (Domesticado)
-                </p>
-                <p class="description-text1">
-                    Horas de Sono: 12 – 16 horas
-                </p>
-                <p class="description-text2">
-                    Nome científico: Felis catus
-                </p>
-                <p class="description-text3">
-                    Altura: 23 – 25 cm
-                </p>
-                <p class="description-text4">
-                    Peso: 4 – 5 kg (Domesticado)
-                </p>
-                <p class="description-text5">
-                    Período de Gestação: 65 dias
-                </p>
 
             </div>
-            <div class="slides-img">
-                <img src="./img/imgCat-8.png" alt="cat 8">
-            </div>
+            <div class="description-cat2">
 
+                <div class="description-text">
+
+                    <p class="text">
+                        Expectativa de Vida: 12 – 18 anos (Domesticado)
+                    </p>
+                    <p class="text1">
+                        Horas de Sono: 12 – 16 horas
+                    </p>
+                    <p class="text2">
+                        Nome científico: Felis catus
+                    </p>
+                    <p class="text3">
+                        Altura: 23 – 25 cm
+                    </p>
+                    <p class="text4">
+                        Peso: 4 – 5 kg (Domesticado)
+                    </p>
+                    <p class="text5">
+                        Período de Gestação: 65 dias
+                    </p>
+
+                </div>
+                <div>
+                    <img src="./img/imgCat-8.png" class="cat8">
+                </div>
         </section>
         <section class="raças" id="raças">
-            <h2 class="raça"> RAÇAS</h2>
-
+            <div class="raças-icon">
+                <h2 class="title-raça"> RAÇAS</h2>
+                <img src="./img/icon2.png" alt="" class="icon2">
+            </div>
+            <span></span>
         </section>
         <section></section>
         <section></section>
