trabalho em andamento

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="#curiosities">Movies</a>
 
             </li>
-           
+           <button class="container"> Play Game </button>
 
 
        
