secao black-friday completa

--- a/ds1t-b/one-page-nike/index.html
+++ b/ds1t-b/one-page-nike/index.html
@@ -76,27 +76,64 @@
         </section>
 
         <section class="black-friday" id="black-friday">
-            <div class="faixa">BLACK FRIDAY
-                <img src="./img/logo-nike-black.png" height="40px" width="100px" alt="logo nike preto">
+            <div class="faixa">
+                <span class="title">BLACK FRIDAY</span>
             </div>
-            <div class="card-container">
-                <a href="https://github.com/MatheusAlves099/landing-page-pikachu" target="blank" class="card">
-                    <img src="./img/black-friday/produtos1/chuteira1.png" height="200px" width="200px" alt="chuteira nike">
+            <img class="logo" src="./img/logo-nike-red-border.png" height="40px" width="100px" alt="logo nike preto">
+            <div class="img-container">
+                <a href="https://www.nike.com.br/chuteira-nike-phantom-gt2-academy-society-012717.html?cor=15&utm_source=googleshop&utm_medium=CPC&utm_campaing=Top_Sellers_PRS&gclid=Cj0KCQiAg_KbBhDLARIsANx7wAwfNEBtQieqL5z-XPcBMnz6ugPb_PUQjTeoyVSabHHvni0G_1uqYJcaArvGEALw_wcB" target="blank" class="img">
+                    <img class="images" src="./img/black-friday/produtos1/chuteira1.png" height="200px" width="200px" alt="chuteira nike">
+                    <div class="description">
+                        <p class="description-title">Chuteira Nike Phantom GT2 Academy Society</p>
+                        <p class="description-old-price">R$ 799,99</p>
+                        <p class="description-new-price">R$ 499,99</p>
+                        <p class="description-discount">38 %OFF</p>
+                    </div>
                 </a>
-                <a href="https://github.com/MatheusAlves099/headphone-purple" target="blank" class="card">
-                    <img src="./img/black-friday/produtos1/camiseta-drifit.png" height="200px" width="200px" alt="camiseta-dri-fit">
+                <a href="https://www.nike.com.br/camisa-nike-dri-fit-masculina-007226.html?cor=ID&gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
+                    <img class="images" src="./img/black-friday/produtos1/camiseta-drifit.png" height="200px" width="200px" alt="camiseta-dri-fit">
+                    <div class="description">
+                        <p class="description-title">Camiseta Nike Dri-FIT Uniformes</p>
+                        <p class="description-old-price">R$ 119,99</p>
+                        <p class="description-new-price">R$ 49,99</p>
+                        <p class="description-discount">58 %OFF</p>
+                    </div>
                 </a>
-                <a href="https://github.com/MatheusAlves099/atividade_LIMA" target="blank" class="card">
-                    <img src="./img/black-friday/produtos1/camiseta-barca.png" height="200px" width="200px" alt="camiseta-barca">
+                <a href="https://www.nike.com.br/camiseta-nike-barcelona-strike-masculina--021883.html?cor=15#u_gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
+                    <img class="images" src="./img/black-friday/produtos1/camiseta-barca.png" height="200px" width="200px" alt="camiseta-barca">
+                    <div class="description">
+                        <p class="description-title">Camiseta Nike Barcelona Strike Masculina</p>
+                        <p class="description-old-price">R$ 299,99</p>
+                        <p class="description-new-price">R$ 209,99</p>
+                        <p class="description-discount">30 %OFF</p>
+                    </div>
                 </a>
-                <a href="https://github.com/MatheusAlves099/projeto-nike" target="blank" class="card">
-                    <img src="./img/black-friday/produtos1/shorts-drifit.png" height="200px" width="200px" alt="shorts-dri-fit">
+                <a href="https://www.nike.com.br/shorts-nike-dri-fit-academy-masculino-011264.html?cor=ID#u_gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
+                    <img class="images" src="./img/black-friday/produtos1/shorts-drifit.png" height="200px" width="200px" alt="shorts-dri-fit">
+                    <div class="description">
+                        <p class="description-title">Shorts Nike Dri-FIT Academy Masculino</p>
+                        <p class="description-old-price">R$ 119,99</p>
+                        <p class="description-new-price">R$ 79,99</p>
+                        <p class="description-discount">33 %OFF</p>
+                    </div>
                 </a>
-                <a href="https://github.com/MatheusAlves099/FormativaTabuada" target="blank" class="card">
-                    <img src="./img/black-friday/produtos1/camiseta-psg.png" height="200px" width="200px" alt="camiseta-psg">
+                <a href="https://www.nike.com.br/camiseta-nike-psg-crest-masculina-021846.html?cor=15#u_gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
+                    <img class="images" src="./img/black-friday/produtos1/camiseta-psg.png" height="200px" width="200px" alt="camiseta-psg">
+                    <div class="description">
+                        <p class="description-title">Camiseta Nike PSG Crest Masculina</p>
+                        <p class="description-old-price">R$ 199,99</p>
+                        <p class="description-new-price">R$ 139,99</p>
+                        <p class="description-discount">30 %OFF</p>
+                    </div>
                 </a>
-                <a href="https://github.com/MatheusAlves099/receita-bolo" target="blank" class="card">
-                    <img src="./img/black-friday/produtos1/bola-brasil.png" height="200px" width="200px" alt="bola-brasil">
+                <a href="https://www.nike.com.br/bola-nike-brasil-strike-013867.html?cor=51#u_gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
+                    <img class="images"src="./img/black-friday/produtos1/bola-brasil.png" height="200px" width="200px" alt="bola-brasil">
+                    <div class="description">
+                        <p class="description-title">Bola Nike Brasil Strike</p>
+                        <p class="description-old-price">R$ 199,99</p>
+                        <p class="description-new-price">R$ 169,99</p>
+                        <p class="description-discount">15 %OFF</p>
+                    </div>
                 </a>
             </div>
         </section>
