--- a/ds1t-a/Luiz Gustavo/index.html
+++ b/ds1t-a/Luiz Gustavo/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +9,10 @@
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/menu.css">
+    <link rel="stylesheet" href="/css/inicio.css">
     <title>One Page</title>
 </head>
+
 <body>
     <header>
         <div class="menu-bar">
@@ -20,32 +23,32 @@
             <ul class="lista-menu">
 
                 <li id="li-inicio">
-                    <a href="#">
+                    <a href="#inicio">
                         Início
                     </a>
                 </li>
                 <li id="li-iphone">
-                    <a href="#sobre-mim">
+                    <a href="#iphone">
                         Iphone
                     </a>
                 </li>
                 <li id="li-ipad">
-                    <a href="#projetos">
+                    <a href="#ipad">
                         Ipad
                     </a>
                 </li>
                 <li id="li-mac">
-                    <a href="#contatos">
+                    <a href="#mac">
                         MacBook
                     </a>
                 </li>
                 <li id="li-ipod-watch">
-                    <a href="#contatos">
+                    <a href="#airpods-watch">
                         AirWatch e AirPods
                     </a>
                 </li>
                 <li id="li-contatos">
-                    <a href="#contatos">
+                    <a href="#contato">
                         Contato
                     </a>
                 </li>
@@ -54,6 +57,30 @@
         </div>
 
     </header>
-    
+    <main>
+        <section class="section-inicio" id="inicio">
+            <div class="main-home">
+                <div class="home-text">
+                    <h1 class="title-apple">Apple</h1>
+                    <p class="text-apple">É uma empresa multinacional norte-americana que tem o objetivo de projetar e comercializar produtos eletrônicos de consumo, software de computador e computadores pessoais. Os produtos de hardware mais conhecidos da empresa incluem
+                        a linha de computadores Macintosh, iPod, iPhone, iPad, Apple TV e o Apple Watch.
+                    </p>
+                </div>
+                <img src="/img/PRODUTOS.png" alt="produtos" class="img-produtos">
+            </div>
+
+            <div class="logo-footer">
+                <img src="/img/MAÇÃ.png" alt="logo">
+                <p class="text-logo">APPLE</p>
+            </div>
+
+        </section>
+        <section class="section-iphone" id="iphone"></section>
+        <section class="section-ipad" id="ipad"></section>
+        <section class="section-mac" id="mac"></section>
+        <section class="section-airpods-watch" id="airpods-watch"></section>
+        <section class="section-contato" id="contato"></section>
+    </main>
 </body>
+
 </html>
