Main-left Iphone finalizado

--- a/ds1t-a/Luiz Gustavo/index.html
+++ b/ds1t-a/Luiz Gustavo/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/menu.css">
     <link rel="stylesheet" href="/css/inicio.css">
+    <link rel="stylesheet" href="/css/iphone.css">
     <title>One Page</title>
 </head>
 
@@ -75,7 +76,15 @@
             </div>
 
         </section>
-        <section class="section-iphone" id="iphone"></section>
+        <section class="section-iphone" id="iphone">
+            <div class="main-left">
+                <img src="/img/IPHONES.png" alt="iphones" class="iphones">s
+                <p class="text-button">
+                    IPhone 14 pro o mais potente e tecnologico atualmente, clique no botão e veja:
+                </p>
+                <a href="" class="button-iphone">Clique Aqui</a>
+            </div>
+        </section>
         <section class="section-ipad" id="ipad"></section>
         <section class="section-mac" id="mac"></section>
         <section class="section-airpods-watch" id="airpods-watch"></section>
