--- a/ds1t-a/Luiz Gustavo/index.html
+++ b/ds1t-a/Luiz Gustavo/index.html
@@ -82,7 +82,15 @@
                 <p class="text-button">
                     IPhone 14 pro o mais potente e tecnologico atualmente, clique no botão e veja:
                 </p>
-                <a href="" class="button-iphone">Clique Aqui</a>
+                <a href="https://www.apple.com/br/iphone-14-pro/" class="button-iphone">Clique Aqui</a>
+            </div>
+            <div class="main-right">
+                <h1 class="title-iphone">Iphone</h1>
+                <p class="text-iphone">
+                    iPhone é uma linha de smartphones desenvolvidos e comercializados pela Apple Inc. É o único smartphone a operar com o sistema operacional móvel iOS. A primeira geração do iPhone foi lançada em 29 de junho de 2007, desde então, a Apple lançou novos modelos
+                    anualmente sendo o iPhone 14, iPhone 14 Plus, iPhone 14 Pro e iPhone 14 Pro Max os modelos mais recentes. A linha ‘14’ do iPhone foi anunciada em 7 de setembro de 2022 na conferência anual da Apple, transmitida na Apple Park, em Cupertino.
+                </p>
+                <img src="/img/IPHONE 14 PRO.png" alt="iphone14" class="iphone14">
             </div>
         </section>
         <section class="section-ipad" id="ipad"></section>
