Header e Início concluídos.

--- a/ds1t-b/yasmin/index.html
+++ b/ds1t-b/yasmin/index.html
@@ -4,10 +4,71 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/menu.css">
+    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/sobre.css">
+    <link rel="stylesheet" href="./css/destinos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Rose:wght@300;400;700&display=swap" rel="stylesheet">
     <title>TRVLS</title>
+    <link rel="icon" href="./img/mundo.png">
 </head>
 <body>
-    
+    <header>
+        <img src="./img/logotrvls.png" alt="">
+        <nav>
+            <ul class="menu">
+                <li>
+                    <a href="#home">Início</a>
+                </li>
+                <li>
+                    <a href="#sobre">Sobre nós</a>
+                </li>
+                <li>
+                    <a href="#destinos">Destinos</a>
+                </li>
+                <li>
+                    <a href="#avaliacoes">Avaliações</a>
+                </li>
+                <li>
+                    <a href="#contato">Contato</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="home" id="home">
+            <h3 class="home__title">Há novos horizontes a sua espera, vá explorar.</h3>
+        </section>
+
+        <section class="sobre" id="sobre">
+            <img class="img-turista" src="./img/turista.png" alt="Turista">
+            <div class="sobre__info">
+                <h3 class="sobre__title">As aventuras falam por nós!</h3>
+                <p class="sobre__description">
+                    Só com a TRVLS você vive momentos únicos de maneira diferenciada!  Nosso maior objetivo é te proporcionar experiências inesquecíveis.                
+                </p>
+                <p class="sobre__description">
+                    Somos mestres em trazer novas aventuras para grandes exploradores como você!
+                </p>
+            </div>
+        </section>
+
+        <section class="destinos" id="destinos">
+            <h3 class="destinos__title">Encontre destinos populares!</h3>
+            <p class="destinos__description">Os melhores destinos e com os melhores preços, você só encontra na TRVLS.</p>
+        </section>
+
+        <section class="avaliacoes" id="avaliacoes"></section>
+
+        <section class="contato" id="contato"></section>
+
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
