--- a/ds1t-b/claudioSousa/index.html
+++ b/ds1t-b/claudioSousa/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/nav.css">
     <link rel="stylesheet" href="CSS/home.css">
+    <link rel="stylesheet" href="CSS/cardapio.css">
+    <link rel="stylesheet" href="CSS/title.css">
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,6 +41,25 @@
         <section class="home">
 
             <img src="IMG/logoChurrascaria.PNG" alt="Logo da churrascaria Sousa" class="img-logo">
+
+        </section>
+
+        <section class="cardapio">
+
+            <h2 class="title">Cardápio</h2>
+
+            <div class="card-text">
+                <h3 class="title-2">Porções:</h3>
+                <div class="porções">
+                    <img src="./IMG/fotoCarne.png" alt="Carne me uma tábua" class="fotoDaCarne">
+                    
+
+                </div>
+
+
+            </div>
+
+            <div class="card-foto"></div>
 
         </section>
 
