--- a/ds1t-a/juliaSoares/index.html
+++ b/ds1t-a/juliaSoares/index.html
@@ -4,50 +4,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/navBar.css">
-    <link rel="stylesheet" href="./css/home.css">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@500&display=swap " rel="stylesheet ">
+    <link href="https://fonts.googleapis.com/css2?family=Habibi&display=swap " rel="stylesheet ">
+    <link rel="stylesheet " href="./css/reset.css ">
+    <link rel="stylesheet " href="./css/style.css ">
+    <link rel="stylesheet " href="./css/navBar.css ">
+    <link rel="stylesheet " href="./css/home.css ">
+    <link rel="stylesheet " href="./css/historia.css ">
 
     <title>Starbucks Coffe</title>
 </head>
 
 <body>
     <header>
-        <div class="logo">
-            <img src="./img/Logo.png" alt="logo" class="logo-principal">
+        <div class="logo ">
+            <img src="./img/Logo.png " alt="logo " class="logo-principal ">
         </div>
         <nav>
-            <ul class="navBar">
+            <ul class="navBar ">
 
                 <li>
-                    <a href="#home">Home</a>
+                    <a href="#home ">Home</a>
                 </li>
 
                 <li>
-                    <a href="#historia">História</a>
+                    <a href="#historia ">História</a>
                 </li>
 
                 <li>
-                    <a href="#niveis-de-torra">Níveis de torra</a>
+                    <a href="#niveis-de-torra ">Níveis de torra</a>
                 </li>
 
                 <li>
-                    <a href="#menu">Menu</a>
+                    <a href="#menu ">Menu</a>
                 </li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section class="home">
-            <img src="./img/imagem-slider1.png" alt="img-slider" class="img-slider">
+        <section class="home ">
+            <img src="./img/imagem-slider1.png " alt="img-slider " class="img-slider ">
         </section>
-        <section class="historia">
-
+        <section class="historia ">
+            <img src="./img/starbucks-store.png " alt="loja " class="store-starbucks ">
+            <span class="historia__title ">SOBRE NÓS</span>
+            <h2 class="historia__subtitle ">A História do Starbucks</h2>
+            <p class="historia__text ">Todos os dias, os parceiros (funcionários) da Starbucks vão trabalhar na esperança de fazer duas coisas: compartilhar um ótimo café com seus amigos e ajudar a tornar o mundo um pouco melhor.</p>
+            <p class="button-historia">
+                <a class="button_text" href="https://www.starbucksathome.com/br/sobre-starbucks">Leia a História</a>
+            </p>
         </section>
-        <section class="niveis-de-torra">Níveis de torra</section>
-        <section class="menu">Menu</section>
+        <section class="niveis-de-torra ">Níveis de torra</section>
+        <section class="menu ">Menu</section>
 
     </main>
     <footer>FOOTER</footer>
