section soccer finalizado

--- a/ds1t-b/one-page-nike/index.html
+++ b/ds1t-b/one-page-nike/index.html
@@ -16,8 +16,7 @@
     <link rel="stylesheet" href="./css/menu.css">
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/black-friday.css">
-    <link rel="stylesheet" href="./css/section-title.css">
-    <link rel="stylesheet" href="./css/projetos.css">
+    <link rel="stylesheet" href="./css/soccer.css">
     <link rel="stylesheet" href="./css/contato.css">
     <link rel="stylesheet" href="./css/back.css">
     <title>One Page - Nike</title>
@@ -136,30 +135,73 @@
                     </div>
                 </a>
             </div>
+            <nav class="circulos-interacao">
+                <a href="#">
+                    <div class="circulo1"></div>
+                </a>
+                <a href="#">
+                    <div class="circulo2"></div>
+                </a>
+            </nav>
+
         </section>
 
-        <section class="projetos" id="projetos">
-            <h2 class="section-title">Projetos</h2>
-            <div class="card-container">
-                <a href="https://github.com/MatheusAlves099/landing-page-pikachu" target="blank" class="card">
-                    <img src="./img/pikachu.png" alt="Pikachu">
+        <section class="soccer" id="soccer">
+            <div class="title-soccer">
+                <span>NIKE <span class="soccer-t">SOCCER</span> </span>
+            </div>
+            <div class="img-container-soccer">
+                <a href="https://www.nike.com.br/camisa-nike-franca-i-202223-torcedor-pro-masculina-023156.html?cor=15#u_gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
+                    <img class="images-soccer" src="./img/soccer/produtos1/camiseta-franca.png" height="300px" width="300px" alt="camiseta-franca">
+                    <div class="description-soccer">
+                        <p class="description-soccer-title">Camisa Nike França I 2022/23 Torcedor Pro Masculina</p>
+                        <p class="description-soccer-price">R$ 399,99</p>
+                    </div>
                 </a>
-                <a href="https://github.com/MatheusAlves099/headphone-purple" target="blank" class="card">
-                    <img src="./img/headphone.png" alt="Headphone">
+                <a href="https://www.nike.com.br/camisa-nike-inglaterra-ii-202223-torcedor-pro-masculina-023143.html?cor=P1#u_gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
+                    <img class="images-soccer" src="./img/soccer/produtos1/camiseta-inglaterra.png" height="300px" width="300px" alt="camiseta-inglaterra">
+                    <div class="description-soccer">
+                        <p class="description-soccer-title">Camisa Nike Inglaterra II 2022/23 Torcedor Pro Masculina</p>
+                        <p class="description-soccer-price">R$ 399,99</p>
+                    </div>
                 </a>
-                <a href="https://github.com/MatheusAlves099/atividade_LIMA" target="blank" class="card">
-                    <img src="./img/regular-show.png" alt="Regular Show">
+                <a href="https://www.nike.com.br/camisa-nike-holanda-i-202223-torcedor-pro-masculina-023138.html?cor=A1#u_gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
+                    <img class="images-soccer" src="./img/soccer/produtos1/camiseta-holanda.png" height="300px" width="300px" alt="camiseta-holanda">
+                    <div class="description-soccer">
+                        <p class="description-soccer-title">Camisa Nike Holanda I 2022/23 Torcedor Pro Masculina</p>
+                        <p class="description-soccer-price">R$ 399,99</p>
+                    </div>
                 </a>
-                <a href="https://github.com/MatheusAlves099/projeto-nike" target="blank" class="card">
-                    <img src="./img/nikee.png" alt="Nike">
+                <a href="https://www.nike.com.br/chuteira-nike-zoom-vapor-15-academy-infantil-futsal-024078.html?cor=ID#u_gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
+                    <img class="images-soccer" src="./img/soccer/produtos1/chuteira-vapor15.png" height="300px" width="300px" alt="chuteira-vapor15">
+                    <div class="description-soccer">
+                        <p class="description-soccer-title">Chuteira Nike Zoom Vapor 15 Academy Infantil Futsal</p>
+                        <p class="description-soccer-price">R$ 499,99</p>
+                    </div>
                 </a>
-                <a href="https://github.com/MatheusAlves099/FormativaTabuada" target="blank" class="card">
-                    <img src="./img/tabuada.png" alt="Tabuada">
+                <a href="https://www.nike.com.br/chuteira-nike-zoom-mercurial-superfly-9-academy-cr7-infantil-futsal-024404.html?cor=51#u_gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
+                    <img class="images-soccer" src="./img/soccer/produtos1/chuteira-superfly9.png" height="300px" width="300px" alt="chuteira-superfly9">
+                    <div class="description-soccer">
+                        <p class="description-soccer-title">Chuteira Nike Zoom Mercurial Superfly 9 Academy CR7 Infantil Futsal</p>
+                        <p class="description-soccer-price">R$ 549,99</p>
+                    </div>
                 </a>
-                <a href="https://github.com/MatheusAlves099/receita-bolo" target="blank" class="card">
-                    <img src="./img/receita-bolo.png" alt="receita-bolo">
+                <a href="https://www.nike.com.br/bola-nike-strike-3rd-013865.html?cor=52#u_gclid=Cj0KCQiAg_KbBhDLARIsANx7wAz2H2ZJaVLs32z-kYjppQVtZFvAUwTV_fAwZzsqK0sVMy_rWP8gAV8aApHIEALw_wcB" target="blank" class="img">
+                    <img class="images-soccer" src="./img/soccer/produtos1/bola-premier.png" height="300px" width="300px" alt="bola-premier">
+                    <div class="description-soccer">
+                        <p class="description-soccer-title">Bola Nike Premier League Strike Third</p>
+                        <p class="description-soccer-price">R$ 139,99</p>
+                    </div>
                 </a>
             </div>
+            <nav class="circulos-interacao-soccer">
+                <a href="#">
+                    <div class="circulo1-soccer"></div>
+                </a>
+                <a href="#">
+                    <div class="circulo2-soccer"></div>
+                </a>
+            </nav>
         </section>
 
         <section class="contato" id="contato">
