sobre concluído e destinos iniciado

--- a/ds1t-b/yasmin/index.html
+++ b/ds1t-b/yasmin/index.html
@@ -40,6 +40,7 @@
         </nav>
     </header>
     <main>
+        
         <section class="home" id="home">
             <h3 class="home__title">Há novos horizontes a sua espera, vá explorar.</h3>
         </section>
@@ -58,8 +59,10 @@
         </section>
 
         <section class="destinos" id="destinos">
-            <h3 class="destinos__title">Encontre destinos populares!</h3>
-            <p class="destinos__description">Os melhores destinos e com os melhores preços, você só encontra na TRVLS.</p>
+            <div class="destinos__text">
+                <h3 class="destinos__title">Encontre destinos populares!</h3>
+                <p class="destinos__description">Os melhores destinos e com os melhores preços, você só encontra na TRVLS.</p> 
+            </div>
         </section>
 
         <section class="avaliacoes" id="avaliacoes"></section>
